--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            
             <a href="#">Testar versão demo</a>
 
-            <img src="img/celulares.png" class="celulares" alt="dois celulares pretos sobrepostos com uma sombra roxa sob">
+            <img src="img/celulares.png" class="celulares" alt="dois celulares pretos sobrepostos com uma sombra roxa ">
 
         </section>
     </main>
